add categroies drop down

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,14 @@
 <h1>Items list</h1>
 <p>The best dishes in town, an maybe in the all universe =)</p>
 
+<form action="index">
+
+  <%= select(:item, :category_id, @category_options) %>
+
+  <%= submit_tag "Filter" %>
+
+</form>
+
 <ul>
   <% @items.each do |item| %>
     <li><%= item.title %></li>
