--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,14 @@
 <header>
   <nav class="main-nav">
-  <% if signed_in? %>
-    <%= link_to "Cart", order_path(current_user.orders.last)  %>
-  <% end %>
+  <% if user_signed_in? %>
+    <% if current_order %>
+      <%= link_to "Cart", order_path(current_order) %>
+    <% else %>
+    <% end %>
+    <%= link_to "Log out", log_out_path, method: :delete  %>
+  <% else %>
     <%= link_to "Sign up", sign_up_path  %>
     <%= link_to "Sign in", sign_in_path  %>
+  <% end %>
   </nav>
 </header>
