add some features

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,14 @@
 <header>
   <nav class="main-nav">
-  <% if user_signed_in? %>
-    <% if current_order %>
-      <%= link_to "Cart", order_path(current_order) %>
+    <ul>
+    <% if user_signed_in? %>
+      <li><%= link_to "Log out", log_out_path, method: :delete  %></li>
+      <li><%= link_to "Orders", orders_path %></li>
     <% else %>
+      <li><%= link_to "Sign up", sign_up_path  %></li>
+      <li><%= link_to "Sign in", sign_in_path  %></li>
     <% end %>
-    <%= link_to "Log out", log_out_path, method: :delete  %>
-  <% else %>
-    <%= link_to "Sign up", sign_up_path  %>
-    <%= link_to "Sign in", sign_in_path  %>
-  <% end %>
+      <li><%= link_to "Cart", order_path(current_order) %></li>
+    </ul>
   </nav>
 </header>
