--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,11 @@
       <li><%= link_to "Sign up", sign_up_path  %></li>
       <li><%= link_to "Sign in", sign_in_path  %></li>
     <% end %>
+    <% if session[:order_id] %>
       <li><%= link_to "Cart", order_path(current_order) %></li>
+    <% else %>
+      <li><%= link_to "Cart" %></li>
+    <% end %>
     </ul>
   </nav>
 </header>
