--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
     <% if session[:order_id] %>
       <li><%= link_to "Cart", order_path(current_order) %></li>
     <% else %>
-      <li><%= link_to "Cart" %></li>
+      <li><a href="#">Cart</a></li>
     <% end %>
     </ul>
   </nav>
