--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,6 +2,16 @@
 
 <p><%= pluralize(@order.order_items.count, "Items") %></p>
 
+<p>Status: <%= @order.status %></p>
+
+<% if @order.status == "cancelled" %>
+  <p>Cancelled on: <%= @order.updated_at %></p>
+<% elsif @order.status == "completed" %>
+  <p>Completed at: <%= @order.updated_at %></p>
+<% elsif @order.status == "ordered" %>
+  <p>Ordered at: <%= @order.updated_at %></p>
+<% end %>
+
 <table>
   <thead>
     <tr>
@@ -9,6 +19,7 @@
       <th>Quantity</th>
       <th>Price</th>
       <th>Sub-total</th>
+      <th colspan="3">Total</th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +30,7 @@
         <td><%= order_item.item.price %></td>
         <td><%= order_item.sub_total %></td>
         <td><%= link_to "description", item_path(order_item.item)  %></td>
+        <td><%= @order.total_price %></td>
       </tr>    
     <% end %>    
   </tbody>
