--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <ul>
     <% if user_signed_in? %>
       <li><%= link_to "Log out", log_out_path, method: :delete  %></li>
-      <li><%= link_to "Orders", orders_path %></li>
+      <li><%= link_to "Orders", orders_path(user_id: current_user.id) %></li>
     <% else %>
       <li><%= link_to "Sign up", sign_up_path  %></li>
       <li><%= link_to "Sign in", sign_in_path  %></li>
