--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,7 @@
       <% if current_user.admin %>
         <ul>
           <li><%= link_to "New Item", new_item_path  %></li>
+          <li><%= link_to "New Category", categories_path  %></li>
         </ul>
       <% end %>
     <% else %>
