--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,7 +14,13 @@
 <% end %>
 
 <ul>
-  <%= @categories.each do |category| %>
-    <li><%= category %></li>
+  <% unless @categories.nil? %>
+    <% @categories.each do |category| %>
+      <li>
+        <%= category.name %>
+        <%= link_to "edit", category_path(category)  %>
+        <%= link_to "delete", category_path(category), method: :delete  %>
+      </li> 
+    <% end %>
   <% end %>
 </ul>
