--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,20 @@
 <h2><%= @item.title %></h2>
 
-<p><%= @item.description %></p>
-<span><%= @item.price %></span>
+<p>DESCRIPTION: <%= @item.description %></p>
+
+<span>PRICE: <%= @item.price %></span><br />
+
+<h3>Categories:</h3>
+<% @item.categories.each do |category| %>
+  <ul>
+    <li><%= category.name %></li>
+  </ul>
+<% end %>
+
+<%= form_with model: @item do |f| %>
+  <%= select(:category, :id, @categories) %>
+  <%= f.submit "Add Category" %>
+<% end %>
+
 
 <%= link_to "Edit", edit_item_path(@item)  %>
