--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -16,6 +16,12 @@
   </div>
 
   <div class="field">
+    <%= f.select :category_ids, options_from_collection_for_select(Category.all, :id, :name), 
+                                                                   { prompt: "Select Categories" }, { multiple: true } %>
+    <%= link_to "Add category", new_category_path %>
+  </div>
+
+  <div class="field">
     <%= f.submit "Create" %>
   </div>
 
