--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,9 @@
 <h3>Categories:</h3>
 <% @item.categories.each do |category| %>
   <ul>
-    <li><%= category.name %></li>
+    <li>
+      <%= category.name %>
+    </li>
   </ul>
 <% end %>
 
