--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,13 +5,14 @@
 <span>PRICE: <%= @item.price %></span><br />
 
 <h3>Categories:</h3>
-<% @item.categories.each do |category| %>
-  <ul>
+<ul class="categories">
+<% @categorizations.each do |categorization| %>
     <li>
-      <%= category.name %>
+      <%= categorization.category.name %>
+      <%= link_to "remove", categorization_path(categorization), method: :delete %>
     </li>
-  </ul>
 <% end %>
+</ul>
 
 <%= form_with model: @item do |f| %>
   <%= select(:category, :id, @categories) %>
