--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,7 @@
       <li><%= link_to "Orders", orders_path(user_id: current_user.id) %></li>
       <% if current_user.admin %>
         <ul>
+          <li><%= link_to "Dashboard", dashboard_path %></li>
           <li><%= link_to "Categories", categories_path  %></li>
           <li><%= link_to "New Item", new_item_path  %></li>
           <li><%= link_to "New Category", categories_path  %></li>
