--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,63 @@
-.main-nav {
-  padding: 20px
+/*
+  *= require reset
+*/
+
+
+/*
+===========================
+        General
+===========================
+*/
+
+h1,
+h2, 
+h3 {
+  color: #222;
 }
+
+
+h1 {
+  font-size: 40px;
+}
+
+/*
+===========================
+        Nav
+===========================
+*/
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #03ccbc;
+}
+
+.main-nav ul {
+  display: flex;
+  list-style: none;
+}
+
+.main-nav ul li a {
+  display: inline-block;
+  padding: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-decoration: none;
+  color: #222
+}
+
+.main-nav ul li a:hover {
+  color: red;
+}
+
+/*
+===========================
+        Buttons
+===========================
+*/
+
+.btn {
+  background-color: #fff;
+  border-radius: 5%;
+}
+
