--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,6 +11,9 @@
     <% if item.retired %>
       <% if user_signed_in? && current_user.admin %>
         <li>
+          <% if item.image? %>
+            <%= image_tag item.image.url %>
+          <% end %>
           <%= item.title %>
           <%= link_to "show", item_path(item) %>
           <%= button_to "Add to Cart", order_items_path(item_id: item.id) %>
@@ -18,6 +21,9 @@
       <% end %>
     <% else %>
         <li>
+          <% if item.image? %>
+            <%= image_tag item.image.url %>
+          <% end %>
           <%= item.title %>
           <%= link_to "show", item_path(item) %>
           <%= button_to "Add to Cart", order_items_path(item_id: item.id) %>
