--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,21 +1,13 @@
 <header>
   <nav class="main-nav">
-    <ul>
+    <ul class="common-nav">
     <li><%= link_to "Home", root_path %></li>
     <% if user_signed_in? %>
       <li><%= link_to "Log out", log_out_path, method: :delete  %></li>
       <li><%= link_to "Orders", orders_path(user_id: current_user.id) %></li>
-      <% if current_user.admin %>
-        <ul>
-          <li><%= link_to "Dashboard", dashboard_path %></li>
-          <li><%= link_to "Categories", categories_path  %></li>
-          <li><%= link_to "New Item", new_item_path  %></li>
-          <li><%= link_to "New Category", categories_path  %></li>
-        </ul>
-      <% end %>
     <% else %>
-      <li><%= link_to "Sign up", sign_up_path  %></li>
-      <li><%= link_to "Sign in", sign_in_path  %></li>
+      <li><%= link_to "Sign up", sign_up_path, class: "btn"  %></li>
+      <li><%= link_to "Sign in", sign_in_path, class: "btn"  %></li>
     <% end %>
     <% if session[:order_id] %>
       <li><%= link_to "Cart", order_path(current_order) %></li>
@@ -23,5 +15,13 @@
       <li><a href="#">Cart</a></li>
     <% end %>
     </ul>
+    <% if current_user.admin %>
+      <ul class="admin-nav">
+        <li><%= link_to "Dashboard", dashboard_path %></li>
+        <li><%= link_to "Categories", categories_path  %></li>
+        <li><%= link_to "New Item", new_item_path, class: "btn"  %></li>
+        <li><%= link_to "New Category", categories_path, class: "btn"  %></li>
+      </ul>
+    <% end %>
   </nav>
 </header>
