--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -4,13 +4,21 @@
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
+  
   <div class="field">
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+
   <div class="field">
     <%= f.label :price %>
     <%= f.text_field :price %>
+  </div>
+
+  <div class="filed">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+    <%= f.hidden_field :image_cache %>
   </div>
 
   <div class="field">
