--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,13 +15,15 @@
       <li><a href="#">Cart</a></li>
     <% end %>
     </ul>
-    <% if current_user.admin %>
-      <ul class="admin-nav">
-        <li><%= link_to "Dashboard", dashboard_path %></li>
-        <li><%= link_to "Categories", categories_path  %></li>
-        <li><%= link_to "New Item", new_item_path, class: "btn"  %></li>
-        <li><%= link_to "New Category", categories_path, class: "btn"  %></li>
-      </ul>
+    <% if user_signed_in? %>
+      <% if current_user.admin %>
+        <ul class="admin-nav">
+          <li><%= link_to "Dashboard", dashboard_path %></li>
+          <li><%= link_to "Categories", categories_path  %></li>
+          <li><%= link_to "New Item", new_item_path, class: "btn"  %></li>
+          <li><%= link_to "New Category", categories_path, class: "btn"  %></li>
+        </ul>
+      <% end %>
     <% end %>
   </nav>
 </header>
