--- a/app/views/shared/_item.html.erb
+++ b/app/views/shared/_item.html.erb
@@ -2,7 +2,9 @@
   <% if item.image? %>
     <%= link_to "", {}, { style: "background-image: url(\"#{item.image.url}\")" } %>
   <% end %>
-  <%= item.title %>
-  <%= link_to "show", item_path(item) %>
-  <%= button_to "Add to Cart", order_items_path(item_id: item.id), class: "btn btn-add-to-cart" %>
+  <div class="item-info">
+    <h3><%= link_to item.title, item_path(item) %></h3>
+    <span><%= number_to_currency(item.price, precision: 2) %></span>
+    <%= button_to "Add to Cart", order_items_path(item_id: item.id), class: "btn btn-add-to-cart" %>
+  </div>
 </div>
