--- a/app/assets/stylesheets/shared/_item.scss
+++ b/app/assets/stylesheets/shared/_item.scss
@@ -2,7 +2,12 @@
 
 .item-container {
   display: flex;
+  padding: 10px;
+  border: 1px solid #d6d9dc;
+  border-radius: 4px;
+  box-shadow: 5px 4px 4px #eff0f1;
 }
+
 
 .item-container > a {
   display: block;
@@ -18,20 +23,41 @@
 
 
 .item-info { 
+  position: relative;
   display: flex;
   flex-direction: column;
-  h3 a {
-    color: black;
+  align-items: flex-start;
+  margin-left: 10px;
+  h3 {
+    margin-bottom: 10px;
+  }
+
+  p {
+    margin-top: 8px;
+    font-size: 14px;
+    text-align: left;
+  }
+
+  h3 > a {
+    color: #000;
     padding: 0;
     margin: 0;
     margin-bottom: 5px;
+    font-size: 14px;
     font-weight: bold;
+    text-align: left;
   }
   span {
     margin-bottom: 5px;
     display: block;
+    font-size: 15px;
     font-weight: bold;
     color: #F0542C;
+  }
+  .btn-add-to-cart {
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 
 }
