--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
 <p>Categories:</p>
 <form action="/">
   <%= select(:category, :id, @category_options) %>
-  <%= submit_tag "Filter" %>
+  <%= submit_tag "Filter", class: "btn-filter" %>
 </form>
 </div>
 
