--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,33 +1,1 @@
-<%= form_with model: @item do |f| %>
-
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-  </div>
-
-  <div class="field">
-    <%= f.select :category_ids, options_from_collection_for_select(Category.all, :id, :name), { prompt: "Select Category",  include_hidden: false }, { multiple: true } %>
-    <%= link_to "Add category", new_category_path %>
-  </div>
-
-  <div class="filed">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-    <%= f.hidden_field :image_cache %>
-  </div>
-
-  <div class="field">
-    <%= f.submit "Create" %>
-  </div>
-
-<% end %>
+<%= render 'shared/form_items', locals: { item: @item }  %>
