refactor heading style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,8 @@
 
 @import 'base/reset';
 @import 'base/variables';
+@import 'base/mixins';
+@import 'base/helpers';
 
 @import 'application/typography';
 @import 'application/layout';
@@ -12,6 +14,9 @@
 @import 'application/objects/inputs';
 
 @import 'shared/_header';
-@import 'shared/_item';
+@import 'shared/_item_card';
+@import 'shared/_form_items';
+
 
 @import 'item_show';
+@import 'item_edit';
