--- a/app/assets/stylesheets/application/_decoration.scss
+++ b/app/assets/stylesheets/application/_decoration.scss
@@ -1,12 +1,4 @@
-h1 {
-  position: relative
-}
-
-h1::after {
-  display: block;
-  content: "";
-  width: 100px;
-  margin: auto;
-  margin-top: 20px;
-  border-bottom: 4px solid $primary-color;
+.page-heading {
+  @include line_below;  
+  position: relative;
 }
