--- a/app/assets/stylesheets/application/typography.scss
+++ b/app/assets/stylesheets/application/typography.scss
@@ -23,15 +23,16 @@ a {
   font-family: 'Revalia', cursive;
 }
 
-h1 {
-  font-family: 'Revalia', cursive;
-  font-size: 40px;
-}
-
 h1,
 h2, 
 h3 {
   color: #222;
+}
+
+.heading {
+  font-family: 'Revalia', cursive;
+  font-size: 36px;
+  text-align: center;
 }
 
 .link {
@@ -62,7 +63,6 @@ h3 {
 .list-title {
   font-family: 'Revalia', cursive;
 }
-
 
 
 /* ------------------------- Icons -------------------- */
