--- a/app/views/shared/_form_items.html.erb
+++ b/app/views/shared/_form_items.html.erb
@@ -1,33 +1,36 @@
-<%= form_with model: @item do |f| %>
+<%= form_with model: @itemm,  html: { class: "items-form" } do |f|  %>
 
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+  <div class="items-form__field">
+    <%= f.label :title, class: "items-form__label" %>
+    <%= f.text_field :title, class: "items-form__text-input" %>
   </div>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+  <div class="items-form__field">
+    <%= f.label :description, class: "items-form__label" %>
+    <%= f.text_area :description, class: "items-form__text-area-input" %>
   </div>
 
-  <div class="field">
-    <%= f.label :price %>
-    <%= f.text_field :price %>
+  <div class="items-form__field">
+    <%= f.label :price, class: "items-form__label" %>
+    <%= f.text_field :price, class: "items-form__text-input" %>
   </div>
 
-  <div class="field">
-    <%= f.select :category_ids, options_from_collection_for_select(Category.all, :id, :name), { prompt: "Select Category",  include_hidden: false }, { multiple: true } %>
-    <%= link_to "Add category", new_category_path %>
+  <div class="items-form__field">
+    <%= f.label :category, class: "items-form__label" %>
+    <%= f.select :category_ids, options_from_collection_for_select(Category.all, :id, :name), 
+                                { prompt: "Select Category",  include_hidden: false },
+                                { multiple: true, class: "items-form__select" } %>
+    <%= link_to "Add category", new_category_path, class: "item-form__link"%>
   </div>
 
-  <div class="filed">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
+  <div class="items-form__field">
+    <%= f.label :image, class: "items-form__label" %>
+    <%= f.file_field :image, class: "itmes-form__file-input" %>
     <%= f.hidden_field :image_cache %>
   </div>
 
-  <div class="field">
-    <%= f.submit "Create" %>
+  <div class="items-form__field">
+    <%= f.submit "Create", class: "itmes-form__button" %>
   </div>
 
 <% end %>
