--- a/app/assets/stylesheets/application/objects/_buttons.scss
+++ b/app/assets/stylesheets/application/objects/_buttons.scss
@@ -29,6 +29,17 @@
   padding: 5px 15px;
   font-weight: bold;
   background-color: #F2C64E;
-  border: 1px solid #CEA22A;
+  border: 1px solid $primary-color-dark;
   border-radius: 5%;
+}
+
+.btn-secondary {
+  font-family: 'Roboto', 'sans';
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0.3em 0.6em;
+  color: #222;
+  background-color: #fff;
+  border: 2px solid $primary-color-dark;
+  border-radius: 4px;
 }
