--- a/app/assets/stylesheets/shared/_form_items.scss
+++ b/app/assets/stylesheets/shared/_form_items.scss
@@ -1,26 +1,65 @@
+
+
 .items-form {
   width: 400px;
   margin: auto;
   margin-top: 40px;
   &__field {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   &__label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
   &__text-input {
+    height: 36px;
     width: 100%;
+    border: 1px solid $primary-color-dark;
+    border-radius: 4px;
+    &::placeholder {
+      position: absolute;
+      left: 5px;
+      top: 5px;
+      font-size: 14px;
+    }
   }
   &__text-area-input {
+    height: 72px;
     width: 100%;
+    border: 1px solid $primary-color-dark;
+    border-radius: 4px;
+    &::placeholder {
+      position: absolute;
+      left: 5px;
+      top: 5px;
+      font-size: 14px;
+    }
   }
   &__select {
     width: 100%;
     height: 100px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
   &__link {
     display: inline-block;
+  }
+  &__file-input {
+    &::-webkit-file-upload-button {
+      visibility: hidden;
+    }
+    &::before {
+      display: inline-block;
+      content: "Choose Image";
+      outline: none;
+      white-space: nowrap;
+      font-family: 'Roboto', 'sans';
+      font-size: 16px;
+      font-weight: bold;
+      padding: 0.3em 0.6em;
+      color: #222;
+      background-color: #fff;
+      border: 2px solid $primary-color-dark;
+      border-radius: 4px;
+    }
   }
 }
