--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,4 +1,35 @@
 
+select {
+  margin-left: 10px;
+  margin-right: 10px;
+  height: 20px;
+}
+
+form {
+  width: 100%;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.field {
+  margin-bottom: 20px;
+}
+
+input[type=text],
+input[type=email],
+input[type=password] {
+  height: 36px;
+  width: 100%;
+  border: 1px solid $primary-color-dark;
+  border-radius: 4px;
+  &::placeholder {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    font-size: 14px;
+  }
+}
 
 .items-form {
   width: 400px;
@@ -9,19 +40,9 @@
   }
   &__label {
     display: block;
-    margin-bottom: 10px;
-  }
-  &__text-input {
-    height: 36px;
-    width: 100%;
-    border: 1px solid $primary-color-dark;
-    border-radius: 4px;
-    &::placeholder {
-      position: absolute;
-      left: 5px;
-      top: 5px;
-      font-size: 14px;
-    }
+    margin-bottom: 15px;
+    font-family: 'Revalia', 'cursive';
+    font-weight: 400;
   }
   &__text-area-input {
     height: 72px;
@@ -36,20 +57,25 @@
     }
   }
   &__select {
+    box-sizing: border-box;
     width: 100%;
     height: 100px;
+    margin: 0;
     margin-bottom: 15px;
+    border: 1px solid $primary-color-dark;
   }
   &__link {
     display: inline-block;
   }
   &__file-input {
+    width: 130px;
     &::-webkit-file-upload-button {
       visibility: hidden;
     }
     &::before {
-      display: inline-block;
       content: "Choose Image";
+      display: inline-block;
+      cursor: pointer;
       outline: none;
       white-space: nowrap;
       font-family: 'Roboto', 'sans';
