--- a/app/assets/stylesheets/layout/_grids.scss
+++ b/app/assets/stylesheets/layout/_grids.scss
@@ -1,3 +1,21 @@
+.container {
+  max-width: 960px;
+  padding: 0 25px;
+  margin: 0 auto;
+}
+
+.container-m {
+  max-width: 400px;
+  margin: auto;
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-left: 30px;
+}
+
 .page-heading {
   text-align: center;
   margin-top: 10px;
@@ -6,7 +24,7 @@
 
 .link {
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .item-title {
@@ -44,20 +62,9 @@ img {
   }
 }
 
-.container {
-  max-width: 960px;
-  padding: 0 25px;
-  margin: 0 auto;
-}
-
-.container-m {
-  max-width: 500px;
-  margin: auto;
-}
-
-.filter-container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-  margin-left: 30px;
+.field {
+  em {
+    display: inline-block;
+    margin-bottom: 10px;
+  }
 }
