--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="menu-page__heading heading">Menu</h2>
+<h2 class="item-index__header header">Menu</h2>
 
 <div class="filter-container">
 <p>Categories:</p>
