--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,43 +1,51 @@
-<h2>Cart</h2>
+<h2 class="order-show__heading heading">Cart</h2>
 
-<p><%= pluralize(@order.order_items.count, "Items") %></p>
+<div class="order-info">
+  <p class="order-info__qunatity">
+    <%= "Items".pluralize %>:
+    <span><%= @order.order_items.count %></span>
+  </p>
+  
+  <p class="order-info__status">Status: <span><%= @order.status %></span></p>
+  
+  <% if @order.status == "cancelled" %>
+    <p class="order-info__status-date">Cancelled on: <%= @order.updated_at %></p>
+  <% elsif @order.status == "completed" %>
+    <p class="order-info__status-date">Completed at: <%= @order.updated_at %></p>
+  <% elsif @order.status == "ordered" %>
+    <p class="order-info__status-date">Ordered at: <%= @order.updated_at %></p>
+  <% end %>
+</div>
 
-<p>Status: <%= @order.status %></p>
-
-<% if @order.status == "cancelled" %>
-  <p>Cancelled on: <%= @order.updated_at %></p>
-<% elsif @order.status == "completed" %>
-  <p>Completed at: <%= @order.updated_at %></p>
-<% elsif @order.status == "ordered" %>
-  <p>Ordered at: <%= @order.updated_at %></p>
-<% end %>
-
-<table>
+<table class="order-table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Quantity</th>
-      <th>Price</th>
-      <th>Sub-total</th>
-      <th colspan="3">Total</th>
+      <th class="order-table__item-title" >Name</th>
+      <th class="order-table__item-quantity">Quantity</th>
+      <th class="order-table__item-price">Price</th>
+      <th class="order-table__item-subtotal">Sub-total</th>
     </tr>
   </thead>
   <tbody>
     <% @order.order_items.each do |order_item| %>
       <tr>
-        <td><%= order_item.item.title %></td>
-        <td><%= link_to order_item.quantity, edit_order_item_path(order_item) %></td>
-        <td><%= order_item.item.price %></td>
-        <td><%= order_item.sub_total %></td>
-        <td><%= link_to "description", item_path(order_item.item)  %></td>
-        <td><%= @order.total_price %></td>
+        <td class="order-table__item-title" ><%= link_to order_item.item.title, item_path(order_item.item) %></td>
+        <td class="order-table__item-quantity"><%= link_to order_item.quantity, edit_order_item_path(order_item), class: "item-quantity" %></td>
+        <td class="order-table__item-price"><%= order_item.item.price %></td>
+        <td class="order-table__item-subtotal"><%= order_item.sub_total %></td>
       </tr>    
     <% end %>    
   </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="3">Total</td>
+      <td class="order-table__total"><%= @order.total_price %></td>
+    </tr>
+  </tfoot>
 </table>
 
 
 
 
 
-<%= link_to "Back", root_path, calss: "link"  %>
+<%= link_to "Back", root_path, class: "link"  %>
