--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,3 +1,4 @@
 $primary-color: #f2c64e !default;
 $primary-color-dark: #cea22a !default;
 $secondary-color: #F0542c !default;
+$dark: #222 !default;
