costumaize flash messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'components/tables';
 @import 'components/buttons';
 @import 'components/components';
+@import 'components/flash';
 
 @import 'shared/header';
 @import 'shared/item_card';
