--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,4 +1,6 @@
 $primary-color: #f2c64e !default;
 $primary-color-dark: #cea22a !default;
 $secondary-color: #F0542c !default;
+$accent-blue: #0075ff !default;
 $dark: #222 !default;
+$light_grey: #f6f6f6 !default;
