--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -8,12 +8,16 @@ table {
     padding: 10px 20px;
   }
 
+  th {
+    font-weight: bold;
+  }
+
   a {
     color: $dark
   }
 
   a:hover {
-    color: $secondary-color
+    color: $accent-blue
   }
 
   td:first-child {
@@ -24,6 +28,10 @@ table {
     border-right: 1px solid #cecfd5;
   }
   
+  tbody tr:nth-child(even) {
+    background-color: $light_grey;
+  }
+
   thead {
     background-color: $dark;
     color: #e8e3e2;
@@ -36,11 +44,8 @@ table {
       border-top-right-radius: 4px;
     }
     
-    
-    tbody tr:nth-child(even) {
-      background-color: #f0f0f2;
-    }
   }
+  
 
   tfoot {
     background-color: $primary-color;
@@ -60,6 +65,7 @@ table {
 .order-table {
 
   &__item-title {
+    font-weight: bold;
     text-align: left;
   }
 
