--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,15 @@
   </head>
 
   <body class="<%= body_class %>">
-    <div class="flash-messagges">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+
+    <div class="flash-messages">
+      <% if notice %>
+        <p class="notice"><%= notice %></p>
+      <% elsif alert %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
     </div>
+    
     <%= render 'shared/header' %>
 
     <div class="container">
