style error messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 
 @import 'shared/header';
 @import 'shared/item_card';
+@import 'shared/error_messages';
 
 @import 'items/edit';
 @import 'items/show';
