--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,17 @@
-<% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+<div class="errors-container">
+  <% if resource.errors.any? %>
+    <div id="error_explanation">
+      <h2 class="error-explanation">
+        <%= I18n.t("errors.messages.not_saved",
+                   count: resource.errors.count,
+                   resource: resource.class.model_name.human.downcase)
+         %>
+      </h2>
+      <ul class="errors-list">
+        <% resource.errors.full_messages.each do |message| %>
+          <li class="errors-list__error-message"><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+</div>
